cluster/apps/networking-system/envoy-gateway/configs/redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metada:
  name: https-redirect
spec:
  parentRefs:
    - name: internal
      port: 80
    - name: external
      port: 80
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
